apps/services/taskwarrior/base/ui/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskwarrior-ui
  labels:
    app: taskwarrior
    component: ui
  annotations:
    tailscale.com/hostname: "task"
spec:
  selector:
    app: taskwarrior
    component: ui
  ports:
    - name: web
      port: 80
      targetPort: 80
      protocol: TCP
  loadBalancerClass: tailscale
  type: LoadBalancer
