apps/services/taskwarrior/base/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskwarrior-ui
  annotations:
    external-dns.alpha.kubernetes.io/hostname: task.xn--qck4cud2cb.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: task.xn--qck4cud2cb.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8n-tailscale
            port:
              name: web
  tls:
  - hosts:
    - task.xn--qck4cud2cb.com
    secretName: task-tls
